<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mercacortex.offerings.MainActivity">


    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appTitle"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <RelativeLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appTitle"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvHomeMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/txvHomeMain" />

        <CheckBox
            android:id="@+id/chbHomeMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/txvHomeMain"
            android:layout_toEndOf="@id/txvHomeMain"
            android:checked="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvElectronicsMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:text="@string/txvElectronicsMain" />

        <CheckBox
            android:id="@+id/chbElectronicsMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/txvElectronicsMain"
            android:layout_toEndOf="@id/txvElectronicsMain"
            android:checked="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll2"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/txvSportsMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:text="@string/txvSportsMain" />

        <CheckBox
            android:id="@+id/chbSportsMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/txvSportsMain"
            android:layout_toEndOf="@id/txvSportsMain"
            android:checked="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvShowRelevantMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="16"
            android:text="@string/txvShowRelevantMain" />

        <CheckBox
            android:id="@+id/chbShowRelevantMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/txvShowRelevantMain"
            android:layout_alignEnd="@id/txvShowRelevantMain"
            android:checked="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnOkMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll4"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/btnOk" />

</RelativeLayout>
